#include <iostream>
class BarraSalud
{
private:
    
public:
    BarraSalud() {}
    ~BarraSalud() {}
};