#include <iostream>
class EfectosDeSonido
{
private:
    
public:
    EfectosDeSonido() {}
    ~EfectosDeSonido() {}
};