#include <iostream>
class EfectosVisuales
{
private:
    
public:
    EfectosVisuales() {}
    ~EfectosVisuales() {}
};