#include <iostream>
class Escenario
{
private:
    
public:
    Escenario() {}
    ~Escenario() {}
};