#include <iostream>
class IAenemigos
{
private:
    
public:
    IAenemigos() {}
    ~IAenemigos() {}
};