#include <iostream>
class Jugador
{
private:
    
public:
    Jugador() {}
    ~Jugador() {}
};