#include <iostream>
class MensajesDeJuego
{
private:
    
public:
    MensajesDeJuego() {}
    ~MensajesDeJuego() {}
};