#include <iostream>
class Menu
{
private:
    
public:
    Menu() {}
    ~Menu() {}
};