#include <iostream>
class Personajes
{
private:
    
public:
    Personajes() {}
    ~Personajes() {}
};