#include <iostream>
class Puntajes
{
private:
    
public:
    Puntajes() {}
    ~Puntajes() {}
};