#include <iostream>
class Temporizador
{
private:
    
public:
    Temporizador() {}
    ~Temporizador() {}
};